tests/whiley/valid/test_752.wyal
define f_requires_0(int[] x) is:
    |x| > 0


assert "assertion failed":
    forall(int y, int z, int[] x):
        if:
            f_requires_0(x)
            y == x[0]
            z == x[0]
        then:
            y == z


